ui improvements and bug fixes

--- a/cadence/index.html
+++ b/cadence/index.html
@@ -480,7 +480,7 @@
       <div class="assignment-section">
         <div class="section-header">
           <h4>Assignments</h4>
-          <div style="display: flex; gap: 0.75rem; align-items: center;">
+          <div class="assignments-actions">
             <button id="btn-add-assignment" type="button" class="btn secondary">
               Add
             </button>
@@ -650,7 +650,7 @@
       <div class="assignment-section">
         <div class="section-header">
           <h4>Assignments</h4>
-          <div style="display: flex; gap: 0.75rem; align-items: center;">
+          <div class="assignments-actions">
             <button id="btn-add-edit-assignment" type="button" class="btn secondary">
               Add
             </button>
@@ -703,7 +703,7 @@
           Title
           <input type="text" id="song-edit-title" required />
         </label>
-        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem;">
+        <div class="song-edit-grid">
           <label>
             BPM
             <input type="number" id="song-edit-bpm" min="0" />
