--- a/cadence/index.html
+++ b/cadence/index.html
@@ -961,7 +961,7 @@
             <div>
               <div class="security-title" style="display: flex; align-items: center; gap: 0.5rem;">
                 <span id="mfa-status-badge" class="badge hidden"
-                  style="background: var(--accent-color); font-size: 0.7rem; padding: 0.1rem 0.5rem;">ENABLED</span>
+                  style="background: var(--accent-color); font-size: 0.7rem; padding: 0.1rem 0.5rem; margin-left:0px">ENABLED</span>
                 Authenticator App (Recommended)
               </div>
               <div class="security-description">Secure your account with an extra layer of protection.</div>
