--- a/cadence/index.html
+++ b/cadence/index.html
@@ -386,6 +386,7 @@
               </div>
             </div>
           </div>
+          <div id="set-detail-pending-requests" class="hidden"></div>
           <div class="set-detail-tabs mobile-only">
             <button type="button" class="tab-btn active" data-detail-tab="songs"><i class="fa-solid fa-list-ul"></i>
               Order</button>
