--- a/cadence/index.html
+++ b/cadence/index.html
@@ -37,7 +37,11 @@
       <div id="user-info" class="user-info hidden">
         <span id="user-name"></span>
         <div id="account-switcher" style="margin-right: 0.5rem; position: relative;">
-          <button id="btn-account-menu" class="btn ghost small"><i class="fa-solid fa-user-circle"></i></button>
+          <button id="btn-account-menu" class="btn ghost small" style="padding: 0; width: 40px; height: 40px; border-radius: 50%; overflow: hidden; display: flex; align-items: center; justify-content: center;">
+            <div id="user-profile-picture" class="user-profile-picture" style="width: 100%; height: 100%; border-radius: 50%; background: var(--bg-tertiary); display: flex; align-items: center; justify-content: center; font-size: 1.2rem; font-weight: 500; color: var(--text-secondary); text-transform: uppercase;">
+              <i class="fa-solid fa-user-circle" style="font-size: 1.5rem;"></i>
+            </div>
+          </button>
           <div id="account-menu" class="hidden account-menu">
             <div id="account-menu-team-section" style="padding: 0.5rem;">
               <div style="font-size: 0.9rem; color: var(--text-secondary); margin-bottom: 0.5rem;">Current Team</div>
@@ -807,8 +811,11 @@
         </div>
         <div id="song-links-list"></div>
         <div class="modal-actions">
-          <button type="button" class="btn ghost" id="cancel-song-edit">Cancel</button>
-          <button type="submit" class="btn primary">Save</button>
+          <button type="button" class="btn ghost" id="delete-song-from-edit-modal" style="display: none;">Delete</button>
+          <div style="display: flex; gap: 0.5rem; margin-left: auto;">
+            <button type="button" class="btn ghost" id="cancel-song-edit">Cancel</button>
+            <button type="submit" class="btn primary">Save</button>
+          </div>
         </div>
       </form>
     </div>
@@ -981,7 +988,27 @@
           <i class="fa-solid fa-circle-xmark"></i>
         </button>
       </header>
-      <form id="edit-account-form">
+      <form id="edit-account-form" style="flex: 1; display: flex; flex-direction: column; overflow: hidden;">
+        <div style="flex: 1; overflow-y: auto; padding-right: 0.5rem; margin-right: -0.5rem;">
+        <label style="margin-bottom: 2rem;">
+          Profile Picture
+          <div style="display: flex; align-items: center; gap: 1rem; margin-top: 0.5rem;">
+            <div id="profile-picture-preview" class="profile-picture-preview" style="width: 64px; height: 64px; border-radius: 50%; background: var(--bg-tertiary); display: flex; align-items: center; justify-content: center; font-size: 1.5rem; font-weight: 500; color: var(--text-secondary); border: 2px solid var(--border-color); text-transform: uppercase; position: relative; overflow: hidden; flex-shrink: 0;">
+              <!-- Profile picture or initials will be displayed here -->
+            </div>
+            <div style="display: flex; flex-direction: column; gap: 0.5rem; flex: 1;">
+              <label for="profile-picture-upload" class="btn secondary small" style="cursor: pointer; width: fit-content; margin: 0; display: inline-flex !important; align-items: center !important; gap: 0.5rem; flex-direction: row !important;">
+                <i class="fa-solid fa-upload"></i>
+                <span>Upload Photo</span>
+              </label>
+              <input type="file" id="profile-picture-upload" accept="image/*" style="display: none;">
+              <button type="button" id="btn-remove-profile-picture" class="btn ghost small" style="display: none; color: var(--error-color); width: fit-content; margin: 0; display: inline-flex !important; align-items: center !important; gap: 0.5rem; flex-direction: row;">
+                <i class="fa-solid fa-trash"></i>
+                <span>Remove</span>
+              </button>
+            </div>
+          </div>
+        </label>
         <label>
           Full Name
           <input type="text" id="edit-account-name-input" placeholder="Enter your name" required autocomplete="off" />
@@ -1005,13 +1032,15 @@
               <button type="button" id="btn-manage-totp" class="btn secondary small hidden">Disable</button>
             </div>
           </div>
+        </div>
+        <div class="security-section">
           <div class="security-item">
             <div>
-              <div class="security-title">Password</div>
-              <div class="security-description">Reset your password by email. You'll receive a link to create a new password.</div>
+              <div class="security-title">Reset Password</div>
+              <div class="security-description">You'll receive a link to your email to create a new password.</div>
             </div>
             <div style="display: flex; align-items: center; gap: 0.5rem;">
-              <button type="button" id="btn-reset-password" class="btn secondary small">Reset Password</button>
+              <button type="button" id="btn-reset-password" class="btn secondary small">Reset</button>
             </div>
           </div>
         </div>
@@ -1024,16 +1053,16 @@
             <div class="loading-spinner"></div>
           </div>
         </div>
-        <div class="modal-actions" style="margin-top: 2rem;">
+        <div style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid var(--border-color);">
+          <button type="button" class="btn ghost" id="btn-delete-account"
+            style="color: var(--error-color); width: 100%;"><i class="fa-solid fa-trash"></i> Delete Account</button>
+        </div>
+        </div>
+        <div class="modal-actions" style="position: sticky; bottom: 0; background: var(--bg-card); padding-top: 1.5rem; margin-top: 1.5rem; border-top: 1px solid var(--border-color); margin-left: -2rem; margin-right: -2rem; margin-bottom: -2rem; padding-left: 2rem; padding-right: 2rem; padding-bottom: 2rem;">
           <button type="button" class="btn ghost" id="cancel-edit-account">Cancel</button>
           <button type="submit" class="btn primary">Save</button>
         </div>
       </form>
-
-      <div style="margin-top: 1.5rem; padding-top: 1.5rem; border-top: 1px solid var(--border-color);">
-        <button type="button" class="btn ghost" id="btn-delete-account"
-          style="color: var(--error-color); width: 100%;"><i class="fa-solid fa-trash"></i> Delete Account</button>
-      </div>
     </div>
   </div>
 
@@ -1342,6 +1371,16 @@
           <button type="submit" class="btn primary">Verify</button>
         </div>
       </form>
+    </div>
+  </div>
+
+  <div id="album-art-modal" class="album-art-modal hidden">
+    <div class="album-art-modal-backdrop"></div>
+    <div class="album-art-modal-content">
+      <img id="album-art-modal-img" src="" alt="Album art" class="album-art-modal-image" />
+      <button class="album-art-modal-close" id="close-album-art-modal" aria-label="Close">
+        <i class="fa-solid fa-xmark"></i>
+      </button>
     </div>
   </div>
 
