--- a/cadence/index.html
+++ b/cadence/index.html
@@ -268,6 +268,12 @@
         <div class="dashboard-header">
           <div>
             <h2><i class="fa-solid fa-music"></i> Song Catalog</h2>
+            <div id="itunes-indexing-indicator" class="indexing-indicator hidden">
+              <div class="indexing-progress-bar">
+                <div class="indexing-progress" style="width: 0%;"></div>
+              </div>
+              <span class="indexing-status">Indexing song metadata...</span>
+            </div>
           </div>
           <div class="header-actions">
             <button id="btn-create-song" class="btn primary hidden ripple-btn"><i
