--- a/cadence/index.html
+++ b/cadence/index.html
@@ -269,10 +269,7 @@
           <div>
             <h2><i class="fa-solid fa-music"></i> Song Catalog</h2>
             <div id="itunes-indexing-indicator" class="indexing-indicator hidden">
-              <div class="indexing-progress-bar">
-                <div class="indexing-progress" style="width: 0%;"></div>
-              </div>
-              <span class="indexing-status">Indexing song metadata...</span>
+              <span class="indexing-status">Some song metadata is still indexing</span>
             </div>
           </div>
           <div class="header-actions">
